# shnitsel-tools

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  shnitsel-tools.yml  shnitsel.yml  todo.md
.github/workflows/: documentation.yml  documentation.yml~
dev/: generate_accessors.py  libgenerate.py
dev/benchmarks/: assess_memory_consumption.py  benchmark_loading_times.py  benchmark_xarray_creation.py
docs/: conf.py  index.rst  priority.rst  supporting-information.rst  tutorials.rst
docs/accessors/: conf.py  da_accessors.rst  ds_accessors.rst
docs/tutorial_symlinks/: 0_full_tutorial.ipynb  2_2_general_io.ipynb  2_4a_filtering_structure.ipynb  2_4b_filtering_states.ipynb  2_6_b_datasheet.ipynb  3_across_compounds.ipynb
shnitsel/: README.md  __init__.py  _accessors.py  _contracts.py  _generated_accessors.py  bridges.py  rd.py  units.py  xarray.py
shnitsel/analyze/: __init__.py  dim_red_result.py  dimred.py  generic.py  hops.py  lda.py  pca.py  pls.py  populations.py  spectra.py  stats.py  tica.py
shnitsel/clean/: __init__.py  common.py  dispatch_plots.py  filter_energy.py  filter_geo.py  filter_unphysical.py  filtration.py  filtration2.py  filtration_class.py
shnitsel/cli/: convert_to_shnitsel.py  generate_datasheet.py  merge_shnitsel_files.py
shnitsel/core/: __init__.py  ase.py  convenience.py  feature_detection.py  filter.md  filter_unphysical.py  filtration.py  filtration1.py  filtration2.py  filtre.py  generic.py  geom.py  indexes.py  midx.py  ml.py  numeric.py  populations.py  postprocess.py  spectra.py  stats.py  tree.py  typedefs.py  xrhelpers.py
shnitsel/data/: TrajectoryFormat.py  accessors.py  charge_helpers.py  custom_indexes.py  helpers.py  multi_indices.py  shnitsel_db_format.py  shnitsel_db_helpers.py  state_helpers.py  traj_combiner_methods.py  trajectory_format.py  trajectory_grouping_params.py  trajectory_tree_format.py  trajectory_variable_description.py  tree.py  tree_to_frames.py  xr_io_registry.py
shnitsel/dynamic/: README.md  __init__.py  arraycontainers.py  ase.py  datasheet.py  filter_unphysical.py  filtre.py  icondparse.py  nxparse.py  parsecommon.py  pca_biplot.py  plotting.py  postprocess.py  trajparse.py  xrhelpers.py  xyzparse.py
shnitsel/filtering/: filter.md  helpers.py  state_selection.py  structure_selection.py
shnitsel/geo/: __init__.py  alignment.py  analogs.py  bla.py  geocalc.py  geom.py  geomatch.py  geomatch_exact.py  nonred.py
shnitsel/io/: FormatReader.py  __init__.py  format_reader_base.py  format_registry.py  helpers.py  parse_shnitsel.py  read.py  write.py  xr_io_compatibility.py
shnitsel/plot/: __init__.py  filtration.py
shnitsel/postprocessing/: __init__.py  conversion.py
shnitsel/static/: README.md  __init__.py  pca.py  plotting.py  utils.py
shnitsel/test_support/: TrajectoryVerification.py  trajectory_verification.py
shnitsel/units/: __init__.py  conversion.py  defaults.py  units.py  (+1 more)
tests/: test_accessors.py  test_ase.py  test_datasheet.py  test_filtration.py  test_geom.py  test_plots.py  test_postprocess.py  test_pyrai2md.py  test_sharc_icond.py  test_si_consistency.py  test_stacked_unstacked.py  test_tree_to_frames.py
tutorials/: 00_supporting_information_snippets.ipynb  01_sharc2hdf5.ipynb  02_ase_to_hdf5.ipynb  03_nx2hdf5.ipynb  08_ase_io.ipynb  09_filtration.ipynb  0_1_sharc2hdf5.ipynb  0_2_nx2hdf5.ipynb  0_full_tutorial.ipynb  0_general_io.ipynb  10_property_space.ipynb  10_usage.ipynb  11_datasheet.ipynb  12_butene_pca.ipynb  13_energy_force_plot.ipynb  15_static_module.ipynb  16_multiple_molecules.ipynb  17_multiple_compounds_pca.ipynb  1_1_GS_PCA.ipynb  1_2_GS_cluster_dihedrals.ipynb  1_3_GS_multi_compound_biplot.ipynb  1_4_GS_diheral_PCA.ipynb  2_1_PS_filtration.ipynb  2_1_filtering_structure.ipynb  2_1a_filtering_states.ipynb  2_2_PS_explore.ipynb  2_2_general_io.ipynb  2_3_PS_energy_forces.ipynb  2_3_clean_and_plot.ipynb  2_4_PS_spectra.ipynb  2_4_geo_retinal.ipynb  2_4_new_geo_retinal.ipynb  2_5_hop_distributions.ipynb  2_99_hop_distributions.ipynb  2_99_vis_overview.ipynb  3_1_datasheet.ipynb  3_1_datasheet_nx.ipynb  3_across_compounds.ipynb  README.md  bond_figure.ipynb  (+2 more)
(+797 files in other folders)
