[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shnitsel-tools"
version = "0.0.1"
authors = [
  { name="Robin Curth", email="robin.curth@uni-leipzig.de" },
  { name="Theodor Everley Röhrkasten", email="theodor.roehrkasten@fau.de" },
  { name="Carolin Müller", email="carolin.cpc.mueller@fau.de" },
  { name="Julia Westermayr", email="julia.westermayr@uni-leipzig.de" },

]
description = "Display and interpret output of SHARC"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "scipy>=1.11.4",
  "matplotlib",
  "textalloc",
  "xarray",
  "rdkit",
  "ase",
  "numpy>=1.26.2",
  "pandas>=2.1.4",
  "h5netcdf>=1.3.0",
  "scikit-learn>=1.3.2",
  "jupyter>=1.0.0",
  "py3dmol>=2.0.4",
  "tqdm>=4.66.2",
]

[project.optional-dependencies]
extras = [
  "plotly>=5.22.0",
  "seaborn>=0.13.1",
  "bokeh"
]

dev = [
  "pytest>=5.2",
  "pytest-cov>=4.1.0",
  "tox>=4.10.0",
  "pre-commit>=2.20.0",
  "ruff==0.4.1",
  "mypy>=1.9.0",
  "pandas-stubs"
]

[tool.setuptools]
packages = ["shnitsel"]

[tool.ruff]
include = ["shnitsel/**/*.py"]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
ignore = [
  "E731", # Do not assign a `lambda` expression, use a `def`
  "E741", # Ambiguous variable name
  "E70",  # Multiple statements on one line
]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true
