[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shnitsel-tools"
version = "0.0.1"
authors = [
  { name="Theodor Everley Röhrkasten", email="theodor.roehrkasten@fau.de" },
  { name="Kevin Höllring", email="kevin.hoellring@fau.de" },
  { name="Carolin Müller", email="carolin.cpc.mueller@fau.de" },
]

description = "Collect, manage, process, analyze & visualize surface hopping data"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "scipy>=1.16",
  "matplotlib",
  "xarray",
  "rdkit",
  "ase",
  "numpy>=1.26.2",
  "pandas>=2.1.4",
  "h5netcdf>=1.3.0",
  "scikit-learn>=1.3.2",
  "jupyter>=1.0.0",
  "py3dmol>=2.0.4",
  "tqdm>=4.66.2",
  "pyparsing>=3.2.5",
]

[project.optional-dependencies]
extras = [
  "plotly>=5.22.0",
  "seaborn>=0.13.1",
  "bokeh"
]

dev = [
  "pytest>=5.2",
  "pytest-cov>=4.1.0",
  "hypothesis", # ==6.127.3
  "tox>=4.10.0",
  "pre-commit>=2.20.0",
  "ruff==0.4.1",
  "mypy>=1.9.0",
  "pandas-stubs",
  "scipy-stubs",
  "types-tqdm",

  # Sphinx and its extensions for building documentation
  "sphinx",
  "sphinx-autobuild",
  "sphinx-autosummary-accessors",
  "nbsphinx",
  "sphinx-design",
  "sphinx-autoapi",
]
[project.scripts]
convert_to_shnitsel_file = "shnitsel.cli.convert_to_shnitsel:main"
merge_shnitsel_files = "shnitsel.cli.merge_shnitsel_files:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["shnitsel*"]

[tool.ruff]
include = ["shnitsel/**/*.py"]
extend-exclude = ["shnitsel/_generated_accessors.py"]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
ignore = [
  "E731", # Do not assign a `lambda` expression, use a `def`
  "E741", # Ambiguous variable name
  "E70",  # Multiple statements on one line
]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true

[tool.mypy]
packages = "shnitsel"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
pretty = true
color_output = true
error_summary = true

[[tool.mypy.overrides]]
module = [
  "scipy",
  "sklearn.*"
]
ignore_missing_imports = true

[tool.tox]
min_version = "4.19"
env_list = ["py313", "py312", "py311", "py310"]

[tool.tox.testenv]
deps = ["pytest"]
commands = [
  ["python", "--version"],
  ["pytest"]
]

[tool.pytest.ini_options]
addopts = "--cov=shnitsel-tools --log-level=DEBUG" # "--maxfail=1 "
